--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:theme="@style/Theme.RAMQ"
         tools:targetApi="31">
         <activity
+            android:name=".QRScannerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ScheduleCarpoolActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JoinCarpoolActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CreateCarpoolActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditAccountActivity"
             android:exported="false" />
         <activity
@@ -49,7 +61,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+            android:value="AIzaSyB3pMTZDmqjIhC_xjMVBaAqs7j-5l19qRM" />
 
         <activity
             android:name=".MapsActivity"
