modified FareManager and FareManagement for simplicity, began work on FareActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.RAMQ"
         tools:targetApi="31">
         <activity
+            android:name=".FareActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditAccountActivity"
             android:exported="false" />
         <activity
