--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +17,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RAMQ"
         tools:targetApi="31">
+        <activity
+            android:name=".ScheduleCarpoolSuccessActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EndRideActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ScanQRCodeButtonActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RatingSuccessActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RatingPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".InRideActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AvailableJoinCarpools"
+            android:exported="false" />
+        <activity
+            android:name=".FareActivity"
+            android:exported="false" />
         <activity
             android:name=".QRScannerActivity"
             android:exported="false" />
